--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 _site
+.bundle
 .sass-cache
+.jekyll-cache
 .jekyll-metadata
 .DS_store
 .ruby-version
+.tweet-cache
 Gemfile.lock
-.vscode
+assets/libs/
+node_modules/
+vendor
+.idea
